Hacer formularios responsivos con Bootstrap

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,6 +17,9 @@
       "@reserva/*": [
         "src/app/feature/reserva/*"
       ],
+      "@mascota/*": [
+        "src/app/feature/mascota/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
