--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
       "@reserva/*": [
         "src/app/feature/reserva/*"
       ],
+      "@mascota/*": [
+        "src/app/feature/mascota/*"
+      ],
       "@shared/*": [
         "src/app/shared/*"
       ]
